@@ -9,7 +9,7 @@
 require 5.006_00;
 
 BEGIN {
-$DBI::VERSION = "1.49"; # ==> ALSO update the version in the pod text below!
+$DBI::VERSION = "1.50"; # ==> ALSO update the version in the pod text below!
 }
 
 =head1 NAME
@@ -116,7 +116,7 @@ Tim he's very likely to just forward it to the mailing list.
 
 =head2 NOTES
 
-This is the DBI specification that corresponds to the DBI version 1.49.
+This is the DBI specification that corresponds to the DBI version 1.50.
 
 The DBI is evolving at a steady pace, so it's good to check that
 you have the latest copy.
