@@ -146,6 +146,7 @@ selectrow_arrayref(...)
     ALIAS:
 	selectrow_array = 1
     PREINIT:
+    int is_selectrow_array = (ix == 1);
     imp_sth_t *imp_sth;
     SV *sth;
     AV *row_av;
@@ -156,20 +157,21 @@ selectrow_arrayref(...)
     else {
 	/* --- prepare --- */
 	sth = dbixst_bounce_method("prepare", 3);
-	if (!SvROK(sth))
-	    XSRETURN_UNDEF;
+	if (!SvROK(sth)) {
+	    if (is_selectrow_array) { XSRETURN_EMPTY; } else { XSRETURN_UNDEF; }
+	}
     }
     imp_sth = (imp_sth_t*)(DBIh_COM(sth));
     /* --- bind_param --- */
     if (items > 3) {	/* need to bind params before execute */
 	if (!dbdxst_bind_params(sth, imp_sth, items-2, ax+2) ) {
-	    XSRETURN_UNDEF;
+	    if (is_selectrow_array) { XSRETURN_EMPTY; } else { XSRETURN_UNDEF; }
 	}
     }
     /* --- execute --- */
     DBIc_ROW_COUNT(imp_sth) = 0;
     if ( dbd_st_execute(sth, imp_sth) <= -2 ) {	/* -2 == error */
-        XSRETURN_UNDEF;
+	if (is_selectrow_array) { XSRETURN_EMPTY; } else { XSRETURN_UNDEF; }
     }
     /* --- fetchrow_arrayref --- */
     row_av = dbd_st_fetch(sth, imp_sth);
@@ -177,7 +179,7 @@ selectrow_arrayref(...)
 	if (GIMME == G_SCALAR)
 	    PUSHs(&PL_sv_undef);
     }
-    else if (ix == 1) { /* selectrow_array */
+    else if (is_selectrow_array) {
 	int i;
 	int num_fields = AvFILL(row_av)+1;
 	if (GIMME == G_SCALAR)
